--- a/ecommerce-tools/config/packages/doctrine.yaml
+++ b/ecommerce-tools/config/packages/doctrine.yaml
@@ -1,13 +1,20 @@
 doctrine:
     dbal:
         url: '%env(resolve:DATABASE_URL)%'
-
-        # IMPORTANT: You MUST configure your server version,
-        # either here or in the DATABASE_URL env var (see .env file)
-        #server_version: '16'
-
-        profiling_collect_backtrace: '%kernel.debug%'
-        use_savepoints: true
+        driver: 'pdo_mysql'
+        server_version: '8.0'
+        charset: utf8mb4
+        default_table_options:
+            charset: utf8mb4
+            collate: utf8mb4_unicode_ci
+        options:
+            !php/const PDO::ATTR_ERRMODE: !php/const PDO::ERRMODE_EXCEPTION
+            !php/const PDO::ATTR_DEFAULT_FETCH_MODE: !php/const PDO::FETCH_ASSOC
+            !php/const PDO::ATTR_EMULATE_PREPARES: false
+            !php/const PDO::MYSQL_ATTR_USE_BUFFERED_QUERY: true
+            !php/const PDO::ATTR_PERSISTENT: true
+            !php/const PDO::MYSQL_ATTR_INIT_COMMAND: 'SET NAMES utf8mb4 COLLATE utf8mb4_unicode_ci'
+            !php/const PDO::ATTR_TIMEOUT: 5
     orm:
         auto_generate_proxy_classes: true
         enable_lazy_ghost_objects: true
@@ -19,8 +26,8 @@ doctrine:
         auto_mapping: true
         mappings:
             App:
-                type: attribute
                 is_bundle: false
+                type: attribute
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
@@ -44,6 +51,23 @@ when@prod:
             result_cache_driver:
                 type: pool
                 pool: doctrine.result_cache_pool
+            metadata_cache_driver:
+                type: pool
+                pool: doctrine.system_cache_pool
+            second_level_cache:
+                enabled: true
+                region_cache_driver:
+                    type: pool
+                    pool: doctrine.result_cache_pool
+                region_lifetime: 3600
+                region_lock_lifetime: 60
+                log_enabled: true
+                regions:
+                    default:
+                        lifetime: 3600
+                        cache_driver:
+                            type: pool
+                            pool: doctrine.result_cache_pool
 
     framework:
         cache:
